some minor changes

--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html>
-  <head>
-    <title>Socket.IO chat</title>
-    <link type="text/css" rel="stylesheet" href="/css/sample.css">
-  </head>
-  <body id="sample">
+<head>
+<meta charset="utf-8">
+<title>Socket.IO chat</title>
+<meta name="author" content="">
+<meta http-equiv="Content-Script-type" content="text/javascript">
+<meta http-equiv="Content-style-Type" content="text/css">
+<meta name="description" content="">
+<meta property="og:type" content="website">
+<meta property="og:description" content="">
+<meta property="og:url" content="">
+<meta property="og:image" content="">
+<meta property="og:site_name" content="">
+<meta property="og:title" content="">
+<meta name="keywords" content="">
+<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">  
+<link type="text/css" rel="stylesheet" href="/css/sample.css">
 
+</head>
+<body id="sample">
   <form method="POST" enctype="multipart/form-data" action="/upload">
     <fieldset>
 
@@ -20,6 +33,5 @@
     
     <input type="submit" value="go">
   </form>
-
-  </body>
+</body>
 </html>
