show progress animation when uploading

--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
 <meta property="og:title" content="">
 <meta name="keywords" content="">
 <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">  
+<link type="text/css" rel="stylesheet" href="/css/progress.css">
 <link type="text/css" rel="stylesheet" href="/css/sample.css">
 
 </head>
 <body id="sample">
+  <div class="COMPONENT-PROGRESS">
+    <img class="PROGRESS-IMAGE" src="/images/common/progress-red.gif" alt="">
+  </div>
   <form method="POST" enctype="multipart/form-data" action="/upload">
     <fieldset>
 
@@ -31,7 +35,9 @@
       <input name="image" type="file" >
     </fieldset>
     
-    <input type="submit" value="go">
+    <input type="submit" value="go" class="upload-image-button">
   </form>
+  <script type="text/javascript" src="/libs/jquery-1.11.1.min.js"></script>
+  <script type="text/javascript" src="/js/app.js"></script>
 </body>
 </html>
