design first commit

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
 </head>
 <body id="sample">
+  <header>
+    <div class="main_image"><img src="/public/images/common/main_image.svg" alt=""></div>
+  </header>
   <div class="COMPONENT-PROGRESS">
     <img class="PROGRESS-IMAGE" src="/images/common/progress-red.gif" alt="">
   </div>
