--- a/lib/tpls/layout.html
+++ b/lib/tpls/layout.html
@@ -14,12 +14,15 @@
 <meta property="og:site_name" content="">
 <meta property="og:title" content="">
 <meta name="keywords" content="">
-<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">  
+<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0; minimal-ui">  
 <link type="text/css" rel="stylesheet" href="/css/progress.css">
 <link type="text/css" rel="stylesheet" href="/css/sample.css">
 
 </head>
 <body id="sample">
+  <header>
+    <div class="main_image"><img src="/images/common/main_image.svg" alt=""></div>
+  </header>
   <div class="COMPONENT-PROGRESS">
     <img class="PROGRESS-IMAGE" src="/images/common/progress-red.gif" alt="">
   </div>
