bodyにページ事にidを振るように修正。 完了画面にlayoutが適用されていないので修正

--- a/lib/tpls/layout.html
+++ b/lib/tpls/layout.html
@@ -19,7 +19,7 @@
 <link type="text/css" rel="stylesheet" href="/css/sample.css">
 
 </head>
-<body id="sample">
+<body id="<% content 'body-id' %>">
   <header>
     <div class="main_image"><img src="/images/common/main_image.svg" alt=""></div>
   </header>
