--- a/lib/tpls/index.html
+++ b/lib/tpls/index.html
@@ -1,4 +1,5 @@
 <% extend 'layout' %>
+<% block 'body-id' : %>top<% end %>
 <form method="POST" enctype="multipart/form-data" action="/upload">
 <fieldset>
 <!-- <legend>ファイルサイズとファイルを選択</legend> -->
