fileタイプをjpg,png,gifのみ受け付けるよう修正

--- a/lib/tpls/index.html
+++ b/lib/tpls/index.html
@@ -8,7 +8,7 @@
 	<span>写真をえらぶ</span>
 	<div class="inputfile_wrap">
 		<div class="bummybtn">＋</div>
-		<input name="image" type="file" >
+		<input name="image" type="file" accept="image/jpeg, image/gif, image/png" >
 	</div>
 </label>
 
