ページタイトルをとりあえず修正

--- a/lib/tpls/layout.html
+++ b/lib/tpls/layout.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Socket.IO chat</title>
+<title>Spps-Demo</title>
 <meta name="author" content="">
 <meta http-equiv="Content-Script-type" content="text/javascript">
 <meta http-equiv="Content-style-Type" content="text/css">
