とりあえずloadingimageの差し替えだけ！

--- a/lib/tpls/layout.html
+++ b/lib/tpls/layout.html
@@ -24,7 +24,8 @@
     <div class="main_image"><img src="/images/common/main_image.svg" alt=""></div>
   </header>
   <div class="COMPONENT-PROGRESS">
-    <img class="PROGRESS-IMAGE" src="/images/common/progress-red.gif" alt="">
+    <p>送信しています...</p>
+    <img class="PROGRESS-IMAGE" src="/images/common/icon_loading.svg" alt="">
   </div>
 
 
