clientで画像圧縮

--- a/lib/tpls/layout.html
+++ b/lib/tpls/layout.html
@@ -32,6 +32,7 @@
   <% content %>
 
   <script type="text/javascript" src="/libs/jquery-1.11.1.min.js"></script>
+  <script type="text/javascript" src="/js/megapix-image.js"></script>
   <script type="text/javascript" src="/js/app.js"></script>
 </body>
 </html>
