--- a/lib/tpls/index.html
+++ b/lib/tpls/index.html
@@ -1,6 +1,6 @@
 <% extend 'layout' %>
 <% block 'body-id' : %>top<% end %>
-<form method="POST" enctype="multipart/form-data" action="/upload">
+<form method="POST" id="image-upload-form" enctype="multipart/form-data" action="/upload2">
 <fieldset>
 <!-- <legend>ファイルサイズとファイルを選択</legend> -->
 
@@ -8,7 +8,7 @@
 	<span>写真をえらぶ</span>
 	<div class="inputfile_wrap">
 		<div class="bummybtn">＋</div>
-		<input name="image" type="file" accept="image/jpeg, image/gif, image/png" >
+    <span id="inputfile"><input name="image" type="file" accept="image/jpeg, image/gif, image/png" ></span>
 	</div>
 </label>
 
@@ -24,6 +24,7 @@
 	</span>
 </label>
 
+<input type="hidden" id="image64" name="image64" value="" />
 
 </fieldset>
 
@@ -33,4 +34,5 @@
 
 </form>
 
+<img id="js-preview-photo" src="http://dummyimage.com/100x100" alt="preview" style="position: absolute; top: -1000px;">
 
