--- a/lib/tpls/index.html
+++ b/lib/tpls/index.html
@@ -28,7 +28,7 @@
 
 </fieldset>
 
-<div class="submit_wrap">
+<div class="submit_wrap hide">
 	<button type="submit" value="go" class="upload-image-button"><i></i>Photoshopに送る</button>
 </div>
 
